# Email-Marketing

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/models/: models.py  sheets.py
src/routes/: auth.py  routes.py
src/utils/: config.py  database.py  gemini_service.py  gmail_service.py  google_oauth.py  oauth.py  scraper.py  security.py  sheets.py
