[project]
name = "hyperpersonalized-email-marketing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "supabase>=2.7.4",
    "beautifulsoup4>=4.12.2",
    "aiofiles>=23.2.1",
    "lxml>=4.9.3",
    "requests>=2.31.0",
]