[project]
name = "hyperpersonalized-email-marketing"
version = "0.1.0"
description = "AI-Powered Hyper-Personalized Email Marketing Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "supabase>=2.7.4",
    "beautifulsoup4>=4.12.2",
    "aiofiles>=23.2.1",
    "lxml>=4.9.3",
    "requests>=2.31.0",
    "google-generativeai>=0.8.3",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "email-validator>=2.3.0",
]
